fix(journey): add underline to collapse button on step expandables

--- a/src/static/css/module/process.less
+++ b/src/static/css/module/process.less
@@ -420,10 +420,15 @@ a.list_link {
           .u-mb45;
         });
       }
+      
   }
 
   .expandable_label {
     width: 90%;
+  }
+  
+  .expandable_cue_text {
+    border-bottom: 1px dotted @link-underline;
   }
 
   .expandable_content {
